KubernetesRB/Ingress/onerb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onerb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: swiggy
  template:
    metadata:
      labels:
        app: swiggy
    spec:
      containers:
      - name: rbcont-1
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: swiggy
