KubernetesRB/Ingress/tworb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tworb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zomato
  template:
    metadata:
      labels:
        app: zomato
    spec:
      containers:
      - name: rbcont-2
        image: httpd
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: zomato
